@@ -1,10 +1,11 @@
 // Athena charcommand Configuration file.
-// Created by MC Cameri for eAthena
+// Translated by Peter Kieser <pfak@telus.net>
 
 // Set here the symbol that you want to use for your commands
 // Only 1 character is get (default is '#'). You can set any character,
 // except control-character (0x00-0x1f), '%' (party chat speaking) and '/' (standard ragnarok GM commands)
-// With default character, all commands begin by a '#', example: #revive
+// and '@' (Standard GM Commands)
+// With default character, all commands begin by a '#', example: #save SomePlayer
 command_symbol: #
 
 job: 60
@@ -12,3 +13,6 @@ jobchange: 60
 petrename: 50
 petfriendly: 50
 stats: 40
+option: 60
+save: 60
+statsall: 40
